--- a/koha-tmpl/intranet-tmpl/prog/en/members/memberentryC.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/memberentryC.tmpl
@@ -40,6 +40,9 @@
 			<!-- TMPL_IF NAME="ERROR_login_exist" -->
 				<p>login/password already exist</p>
 			<!-- /TMPL_IF -->
+			<!-- TMPL_IF NAME="ERROR_cardnumber" -->                         
+			   <p>Cardnumber already in use</p>                 
+			 <!-- /TMPL_IF -->
  			<!-- TMPL_IF NAME="ERROR_age_limitations" -->
                                 Patron is too young or too old for this category
                         <!-- /TMPL_IF -->
