--- a/koha-tmpl/intranet-tmpl/prog/en/members/memberentryI.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/memberentryI.tmpl
@@ -37,6 +37,9 @@
             <h1>ERROR</h1>
             <div id="problem">
                 <p>The following fields are wrong. Please fix it/them</p>
+				 <!-- TMPL_IF NAME="ERROR_cardnumber" -->               
+				   <p>Cardnumber already in use</p>         
+				 <!-- /TMPL_IF -->
                 <!-- TMPL_IF NAME="ERROR_login_exist" -->
                     <p>login/password already exist</p>
                 <!-- /TMPL_IF -->
