--- a/koha-tmpl/intranet-tmpl/prog/en/cataloguing/z3950_search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/cataloguing/z3950_search.tmpl
@@ -13,8 +13,15 @@
 
 <body>
 <div id="main-compact">
+
+    <h2>Search for</h2>
+    <!-- TMPL_IF NAME='title'--><p>Title: <!-- TMPL_VAR NAME='title'--></p><!-- /TMPL_IF -->
+    <!-- TMPL_IF NAME='author'--><p>Author: <!-- TMPL_VAR NAME='author'--></p><!-- /TMPL_IF -->
+    <!-- TMPL_IF NAME='isbn'--><p>ISBN: <!-- TMPL_VAR NAME='isbn'--></p><!-- /TMPL_IF -->
+    <!-- TMPL_IF NAME='issn'--><p>ISSN: <!-- TMPL_VAR NAME='issn'--></p><!-- /TMPL_IF -->
+    
 <!-- TMPL_IF name="opsearch" -->
-    <h2>Search on</h2>
+    <h2>on following servers</h2>
     
     <form method="post" action="z3950_search.pl" name="f">
     
@@ -59,7 +66,7 @@
             <td><a href="javascript:Import(<!-- TMPL_VAR NAME="breedingid" -->,<!-- TMPL_VAR NAME="biblionumber" -->)">Import</a></td> 
         
         </tr>
-    <!-- /TMPL_LOOP --> 
+    <!-- /TMPL_LOOP -->
     <!-- TMPL_ELSE -->
         <tr><td colspan="6">Nothing found</td></tr>
     <!-- /TMPL_IF -->
