--- a/koha-tmpl/intranet-tmpl/prog/en/reports/acquisitions_stats.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/reports/acquisitions_stats.tmpl
@@ -17,9 +17,9 @@
      		<!-- TMPL_IF NAME="loopfilter" -->
 			<p>Filtered on</p>
 			<!-- TMPL_LOOP NAME="loopfilter" -->
-					<p><!-- TMPL_IF NAME="err" -->  <!--/TMPL_IF --> <!-- TMPL_VAR NAME="crit"--> =<!--  TMPL_VAR NAME="filter" --><!-- TMPL_IF NAME="err" -->  <!--/TMPL_IF --></p>
+					<p><!-- TMPL_VAR NAME="crit"--> =<!--  TMPL_VAR NAME="filter" --></p>
 			<!-- /TMPL_LOOP -->
-		<!-- /TMPL_IF NAME="loopfilter" -->
+		<!-- /TMPL_IF-->
 		
 		<table>
 			<tr >
