--- a/koha-tmpl/intranet-tmpl/prog/en/cataloguing/addbiblio.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/cataloguing/addbiblio.tmpl
@@ -2,9 +2,17 @@
 <title>Koha &rsaquo; Cataloging &rsaquo; <!-- TMPL_IF NAME="biblionumber" -->Edit MARC Record Number <!-- TMPL_VAR name="biblionumber" --><!-- TMPL_ELSE -->Add MARC Record<!-- /TMPL_IF --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
+<!--TMPL_UNLESS Name="popup"-->
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-catalogue.inc" -->
-	
+<!--/TMPL_UNLESS-->
+<!--TMPL_IF Name="done"-->
+<script language="JavaScript" type="text/javascript">
+  opener.document.forms['f'].biblionumber.value=<!--TMPL_VAR Name="biblionumber"-->;
+  opener.document.forms['f'].title.value='<!--TMPL_VAR Name="title" ESCAPE=HTML-->';
+  self.close();
+</script>
+<!--TMPL_ELSE-->
 <form method="post" name="f" id="f" action="addbiblio.pl">
 <h1><!-- TMPL_IF NAME="biblionumtagfield" -->Edit MARC Record Number <!-- TMPL_VAR name="biblionumber" --><!-- TMPL_ELSE -->Add MARC Record<!-- /TMPL_IF --></h1>
 
@@ -12,15 +20,22 @@
     <!-- TMPL_IF name="biblionumber" -->
         <input type="button" value="Save Bibliographic Record and go to Items" onclick="Check(this.form)" accesskey="w" />
 		<!-- TMPL_ELSE -->
+      <!--TMPL_IF Name="popup"-->  
+        <input type="button" value="Add Bibliographic Record" onclick="Check(this.form)" accesskey="w" />
+      <!--TMPL_ELSE-->  
         <input type="button" value="Add Bibliographic Record and go to Items" onclick="Check(this.form)" accesskey="w" />
-        <!-- /TMPL_IF -->
+      <!-- /TMPL_IF -->
+    <!-- /TMPL_IF -->
     <input type="button" value="z39.50 Search" onclick="PopupZ3950(); return false;" />
 </div>
 <br />
  Change framework : <!--TMPL_VAR Name="framework" -->
 
         <input type="hidden" name="op" value="addbiblio" />
-		<input type="hidden" name="repeat_field" />
+<!--TMPL_IF Name="popup"-->
+        <input type="hidden" name="mode" value="popup" />
+<!--/TMPL_IF-->
+        <input type="hidden" name="repeat_field" />
         <input type="hidden" name="addfield_field" />
         <input type="hidden" name="frameworkcode" value="<!-- TMPL_VAR NAME="frameworkcode" -->" />
         <input type="hidden" name="biblionumber" value="<!-- TMPL_VAR NAME="biblionumber" -->" />
@@ -49,7 +64,7 @@
     <!-- show duplicate warning on tab 0 only -->
         <!-- TMPL_IF name="duplicatebiblionumber" -->
                     <div class="error">
-                        <p class="problem">Is this a duplicate of <a href="../cataloguing/MARCdetail.pl?biblionumber=<!-- TMPL_VAR name="duplicatebiblionumber" -->" onclick="openWindow('../MARCdetail.pl?biblionumber=<!-- TMPL_VAR name="duplicatebiblionumber" -->&popup=1', 'Duplicate biblio'; return false;)"><!-- TMPL_VAR name="duplicatetitle" --></a>?</p>
+                        <p class="problem">Is this a duplicate of <a href="../catalogue/MARCdetail.pl?biblionumber=<!-- TMPL_VAR name="duplicatebiblionumber" -->" onclick="openWindow('../MARCdetail.pl?biblionumber=<!-- TMPL_VAR name="duplicatebiblionumber" -->&popup=1', 'Duplicate biblio'; return false;)"><!-- TMPL_VAR name="duplicatetitle" --></a>?</p>
                         <p>You must either :</p>
                         <ul>
                             <li>If it <em>is</em> a duplicate, <a href="additem.pl?biblionumber=<!-- TMPL_VAR name="duplicatebiblionumber" -->">Edit Items</a> of the existing record.</li>
@@ -394,4 +409,5 @@ function unHideSubfield(index,labelindex) {
 	label.style.display='none';	
 }
 </script>
+<!--/TMPL_IF-->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
