--- a/koha-tmpl/intranet-tmpl/prog/en/tools/printerConfig.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/tools/printerConfig.tmpl
@@ -10,7 +10,7 @@
 		<li>Set left- and bottom-margins of the page that you are going to use. This parameter will help to center the barcodes on the labels.</li>
 	</ul>
 	<br>
-	<form id="formulario" method="POST" action="<!-- TMPL_VAR NAME="SCRIPT_NAME" -->" name="form1">
+	<form id="formulario" method="post" action="<!-- TMPL_VAR NAME="SCRIPT_NAME" -->" name="form1">
 		<input type="hidden" name="saveSettings" value="1" />
 		<table>
 			<tr>
