--- a/koha-tmpl/intranet-tmpl/prog/en/tools/viewlog.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/tools/viewlog.tmpl
@@ -15,7 +15,7 @@
 
 <h1>Browse system logs</h1>
 
-<form method="POST" action="/cgi-bin/koha/tools/viewlog.pl">
+<form method="post" action="/cgi-bin/koha/tools/viewlog.pl">
 
 <fieldset>
     <legend>Additional infos</legend>
