--- a/koha-tmpl/intranet-tmpl/prog/fr/barcodes/barcodes.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/barcodes/barcodes.tmpl
@@ -33,7 +33,7 @@
 	
 <!-- TMPL_IF NAME="ERROR" -->Numéro d'inventaire introuvable dans cette plage.Prière de recommencer.<!-- /TMPL_IF -->
 
-	<form id="formulario" method="POST" action="<!-- TMPL_VAR NAME="SCRIPT_NAME" -->" name="form1" onsubmit="return checkFields(this);" target="_blank">
+	<form id="formulario" method="post" action="<!-- TMPL_VAR NAME="SCRIPT_NAME" -->" name="form1" onsubmit="return checkFields(this);" target="_blank">
 		<label for="rangeType">Type d'intervalle :  </label><!-- TMPL_VAR NAME="RANGE_TYPE" -->
 
 <div id="continuous" class="panel" style="display:inline">
