--- a/koha-tmpl/intranet-tmpl/prog/fr/serials/acqui-search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/serials/acqui-search.tmpl
@@ -13,7 +13,7 @@ function GetIt(aqbooksellerid,name)
 </script>
 
 <h1>Recherche fournisseur pour un abonnement à un périodique</h1>
-    <form action="/cgi-bin/koha/serials/acqui-search-result.pl" method="POST">
+    <form action="/cgi-bin/koha/serials/acqui-search-result.pl" method="post">
         <label for="text">Nom du fournisseur :  </label>
         <input id="text" type="text"  size="25"   name="supplier">
         <input type="submit" class="button serial" value="OK">
