--- a/koha-tmpl/intranet-tmpl/prog/fr/serials/checkexpiration.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/serials/checkexpiration.tmpl
@@ -19,7 +19,7 @@
     
     <form name="f"
           action="/cgi-bin/koha/serials/checkexpiration.pl"
-          method="POST"
+          method="post"
           onsubmit="return CheckForm(this);">
          
         <label for="title">Sélection du titre :</label>
