--- a/koha-tmpl/intranet-tmpl/prog/fr/tools/itemslost.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/tools/itemslost.tmpl
@@ -16,7 +16,7 @@
 </b>
 <br />
 <br />
-<form name="f" action="/cgi-bin/koha/tools/itemslost.pl" method="POST">
+<form name="f" action="/cgi-bin/koha/tools/itemslost.pl" method="post">
     <label for="orderbyfilter">Trier les résultats par</label>
     <select id="orderbyfilter" name="orderbyfilter">
         <option value=""> --- </option>
