--- a/koha-tmpl/intranet-tmpl/prog/fr/tools/printerConfig.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/tools/printerConfig.tmpl
@@ -10,7 +10,7 @@
 		<li>Définissez les marges gauches et basses pour la page que vous souhaitez utiliser. Ces paramètres aideront à centrer les codes barres sur les étiquettes.</li>
 	</ul>
 	<br>
-	<form id="formulario" method="POST" action="<!-- TMPL_VAR NAME="SCRIPT_NAME" -->" name="form1">
+	<form id="formulario" method="post" action="<!-- TMPL_VAR NAME="SCRIPT_NAME" -->" name="form1">
 		<input type="hidden" name="saveSettings" value="1" />
 		<table>
 			<tr>
