--- a/koha-tmpl/opac-tmpl/prog/en/opac-reserve.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-reserve.tmpl
@@ -39,7 +39,7 @@
     <!-- TMPL_IF NAME="already_reserved" -->
     <p class="problem">
         You already have a reserve placed on this item.
-        <form action="/cgi-bin/koha/opac-detail.pl" method="POST">
+        <form action="/cgi-bin/koha/opac-detail.pl" method="post">
             <input type="hidden" name="biblionumber" value="<!-- TMPL_VAR NAME="biblionumber" -->" />
             <input type="submit" class="icon back" value="Return to Item Detail Screen" />
         </form>
