--- a/koha-tmpl/opac-tmpl/prog/en/opac-shelves.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-shelves.tmpl
@@ -16,7 +16,7 @@
 <!-- /TMPL_IF -->
 
 <form action="/cgi-bin/koha/opac-shelves.pl"
-      method="POST"
+      method="post"
       name="mainform"
       onsubmit="return checkForm(this);">
     
