--- a/koha-tmpl/intranet-tmpl/prog/fr/tools/viewlog.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/tools/viewlog.tmpl
@@ -15,7 +15,7 @@
 
 <h1>Consultation des logs du système</h1>
 
-<form method="POST" action="/cgi-bin/koha/tools/viewlog.pl">
+<form method="post" action="/cgi-bin/koha/tools/viewlog.pl">
 
 <fieldset>
     <legend>Informations complémentaires</legend>
