--- a/koha-tmpl/opac-tmpl/prog/en/opac-main.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-main.tmpl
@@ -26,7 +26,7 @@
 <div id="opac-main-changelanguage">
     <h1>Change language</h1>
     <ul>
-    <form action="/cgi-bin/koha/changelanguage.pl" method="POST">
+    <form action="/cgi-bin/koha/changelanguage.pl" method="post">
         <label for="selectlang">Set language to</label>
         <select id="selectlang" name="language" onchange="javascript:submit();">
             <!-- TMPL_LOOP NAME="languages" -->
